--- a/assets/package.json
+++ b/assets/package.json
@@ -1,18 +1,48 @@
 {
-  "repository": {},
-  "license": "MIT",
+  "private": true,
   "scripts": {
-    "deploy": "brunch build --production",
-    "watch": "brunch watch --stdin"
+    "start": "NODE_ENV=development webpack-dev-server --config ./webpack/index.js",
+    "build": "NODE_ENV=production webpack --config ./webpack/index.js"
   },
   "dependencies": {
+    "assets-webpack-plugin": "^3.5.1",
+    "autoprefixer": "^7.1.2",
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
+    "babel-plugin-lodash": "^3.2.11",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-polyfill": "^6.23.0",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-react": "^6.24.1",
+    "clean-webpack-plugin": "^0.1.16",
+    "compression-webpack-plugin": "^1.0.0",
+    "copy-webpack-plugin": "^4.0.1",
+    "css-loader": "^0.28.4",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "favicons-webpack-plugin": "^0.0.7",
+    "file-loader": "^0.11.2",
+    "glob": "^7.1.2",
+    "iconfont-webpack-plugin": "^1.1.0",
+    "image-webpack-loader": "^3.3.1",
+    "jquery": "^3.2.1",
+    "lodash": "^4.17.4",
+    "lodash-webpack-plugin": "^0.11.4",
     "phoenix": "file:../deps/phoenix",
-    "phoenix_html": "file:../deps/phoenix_html"
-  },
-  "devDependencies": {
-    "babel-brunch": "6.1.1",
-    "brunch": "2.10.9",
-    "clean-css-brunch": "2.10.0",
-    "uglify-js-brunch": "2.10.0"
+    "phoenix_html": "file:../deps/phoenix_html",
+    "postcss-loader": "^2.0.6",
+    "postcss-smart-import": "^0.7.5",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "react-hot-loader": "next",
+    "resolve-url-loader": "^2.1.0",
+    "spectre.css": "^0.2.14",
+    "style-loader": "^0.18.2",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.1",
+    "tinycon": "^0.6.8",
+    "url-loader": "^0.5.9",
+    "webpack": "^3.5.2",
+    "webpack-dev-server": "^2.7.1"
   }
 }
